revise and get rid of model answers

--- a/homework_E.ipynb
+++ b/homework_E.ipynb
@@ -59,33 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: write a function thats returns the number of G and C bases in a given sequence.\n",
     "def ___(___):   ### replace the ____\n",
     "    \"\"\"docstring describing the function\"\"\"\n",
     "    return ____ ### replace the ____"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# MODEL ANSWER\n",
-    "def percentage_gc(sequence):\n",
-    "    \"\"\"returns the percentage GC content for a DNA sequence string\"\"\"\n",
-    "    n_gc = 0\n",
-    "    for base in 'GCcg':\n",
-    "        n_gc += sequence.count(base)\n",
-    "    return 100.*n_gc/len(sequence)"
    ]
   },
   {
@@ -97,21 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function percentage_gc in module __main__:\n",
-      "\n",
-      "percentage_gc(sequence)\n",
-      "    returns the percentage GC content for a DNA sequence string\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instruction: run this cell to see the help message for the function:\n",
     "help(percentage_gc)"
@@ -154,39 +123,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expect sequence: G to give %: 100.0\n",
-      "PASS\n",
-      "expect sequence: AC to give %: 50.0\n",
-      "PASS\n",
-      "expect sequence: CAT to give %: 33.33333\n",
-      "PASS\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Instruction: complete this test the number_gc function with the data from the completed table above.\n",
+    "# Idea: complete this test the percentage_gc function with \n",
+    "#       the data from the completed table above.\n",
     "test_seq_percent_gc = [('G', 100.),\n",
     "                       ('AC', 50.),\n",
     "                       ('CAT', 33.33333)\n",
     "                       # complete input data from table above\n",
     "                      ]\n",
-    "for seq, expect_percent in test_seq_percent_gc:\n",
-    "    # replace print line below with a test checking that\n",
-    "    # functon percentage_gc gives the expected answer\n",
-    "    print('expect sequence: ' + seq + \n",
-    "          ' to give %: ' + str(expect_percent))\n",
-    "    # see Hint in next cell for comparing floating numbers\n",
-    "    if round(percentage_gc(seq),3) == round(expect_percent,3):\n",
-    "        print('PASS')\n",
-    "    else:\n",
-    "        print('FAIL')"
+    "for test_seq, expect_percent in test_seq_percent_gc:\n",
+    "    print('test sequence ' + test_seq)\n",
+    "    print('  expect%:' + str(expect_percent))\n",
+    "    # Instruction: apply the percentage_gc function on test_seq and store the \n",
+    "    #              result in a variable \"actual_percent\"\n",
+    "    ### replace this line \n",
+    "    \n",
+    "    # Instruction: modify the next line to print out \"actual_percent\"\n",
+    "    print(' actual%:') ### modify this line\n",
+    "    # Instruction: now compare expect_percent and actual_percent agree to 3 decimal places.\n",
+    "    #              If they agree print 'PASS' otherwise print 'FAIL'\n",
+    "    #               see Hint in next cell for comparing floating numbers\n",
+    "    ### add lines to do comparison."
    ]
   },
   {
@@ -200,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +169,11 @@
      "text": [
       "Help on built-in function round in module builtins:\n",
       "\n",
-      "round(...)\n",
-      "    round(number[, ndigits]) -> number\n",
+      "round(number, ndigits=None)\n",
+      "    Round a number to a given precision in decimal digits.\n",
       "    \n",
-      "    Round a number to a given precision in decimal digits (default 0 digits).\n",
-      "    This returns an int when called with one argument, otherwise the\n",
-      "    same type as the number. ndigits may be negative.\n",
+      "    The return value is an integer if ndigits is omitted or None.  Otherwise\n",
+      "    the return value has the same type as the number.  ndigits may be negative.\n",
       "\n"
      ]
     }
@@ -222,6 +181,31 @@
    "source": [
     "# Instruction run this cell to see help on the round function\n",
     "help(round)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b_num rounded to 2 d.p. 6.0\n",
+      "the two numbers agree to 2 decimal places\n"
+     ]
+    }
+   ],
+   "source": [
+    "# instruction run this example to see how round can be used to compare numbers\n",
+    "a_num = 6.0\n",
+    "b_num = 5.999\n",
+    "print('b_num rounded to 2 d.p. ' + str(round(b_num, ndigits=2)))\n",
+    "if round(a_num, ndigits=2) == round(b_num, ndigits=2):\n",
+    "    print('the two numbers agree to 2 decimal places')\n",
+    "else:\n",
+    "    print('the two numbers do not agree to 2 d.p.')"
    ]
   },
   {
@@ -264,44 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction write a basic_tm function\n",
     "def basic_tm(sequence):\n",
     "    \"\"\"your docsting\"\"\"\n",
     "    tm = 0 # replace this line\n",
-    "    return tm "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# MODEL ANSWER\n",
-    "def basic_tm(sequence):\n",
-    "    \"\"\"\n",
-    "    returns the basic Tm melting temperature in degrees C\n",
-    "    for the input DNA sequence.\n",
-    "    \n",
-    "    For less than 14 bases the formula:\n",
-    "    \n",
-    "    Tm=2(NA+NT)+4(NG+NC)\n",
-    "    \n",
-    "    is used where NA is the number of A's, NT is the number of T's\n",
-    "    This formula is from http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
-    "    who cite Marmur,J., and Doty,P. (1962) J Mol Biol 5:109-118 \n",
-    "    https://doi.org/10.1016/S0022-2836(62)80066-7\n",
-    "    \"\"\"\n",
-    "    tm = 2.*(sequence.count('A') + sequence.count('T'))\n",
-    "    tm += 4.*(sequence.count('G') + sequence.count('C'))\n",
     "    return tm "
    ]
   },
@@ -314,31 +268,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function basic_tm in module __main__:\n",
-      "\n",
-      "basic_tm(sequence)\n",
-      "    returns the basic Tm melting temperature in degrees C\n",
-      "    for the input DNA sequence.\n",
-      "    \n",
-      "    For less than 14 bases the formula:\n",
-      "    \n",
-      "    Tm=2(NA+NT)+4(NG+NC)\n",
-      "    \n",
-      "    is used where NA is the number of A's, NT is the number of T's\n",
-      "    This formula is from http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
-      "    who cite Marmur,J., and Doty,P. (1962) J Mol Biol 5:109-118 \n",
-      "    https://doi.org/10.1016/S0022-2836(62)80066-7\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instruction: run this cell to see the help message for basic_tm:\n",
     "help(basic_tm)"
@@ -386,10 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create a test data list tuples pairs like we did above "
@@ -397,30 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# MODEL ANSWER\n",
-    "# create a test data list tuples pairs like we did above \n",
-    "test_seq_basic_tm = [('G', 4.),\n",
-    "                     ('GG', 8.),\n",
-    "                     ('A', 2.),\n",
-    "                     ('GA', 6.),\n",
-    "                     (13*'A', 26.),\n",
-    "                     (13*'G', 52.),\n",
-    "                     (6*'GA' + 'A', 38.)\n",
-    "                    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# now test your function with test_seq_basic_tm\n",
@@ -429,121 +337,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "expect sequence: G gives Tm: 4.0\n",
-      "PASS\n",
-      "expect sequence: GG gives Tm: 8.0\n",
-      "PASS\n",
-      "expect sequence: A gives Tm: 2.0\n",
-      "PASS\n",
-      "expect sequence: GA gives Tm: 6.0\n",
-      "PASS\n",
-      "expect sequence: AAAAAAAAAAAAA gives Tm: 26.0\n",
-      "PASS\n",
-      "expect sequence: GGGGGGGGGGGGG gives Tm: 52.0\n",
-      "PASS\n",
-      "expect sequence: GAGAGAGAGAGAA gives Tm: 38.0\n",
-      "PASS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# MODEL ANSWER\n",
-    "for seq, expect_tm in test_seq_basic_tm:\n",
-    "    # replace print line below with a test checking that\n",
-    "    # functon percentage_gc gives the expected answer\n",
-    "    print('expect sequence: ' + seq + \n",
-    "          ' gives Tm: ' + str(expect_tm))\n",
-    "    if round(basic_tm(seq),3) == round(expect_tm,3):\n",
-    "        print('PASS')\n",
-    "    else:\n",
-    "        print('FAIL')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "# Advanced programmers only! Avoid code duplication \n",
     "# in the testing by writing a function  that can test\n",
     "# both percentage_gc and basic_tm functions against the\n",
     "# appropriate test data set."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing function: basic_tm\n",
-      "\texpect sequence: G gives data: 4.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GG gives data: 8.0\n",
-      "\tPASS\n",
-      "\texpect sequence: A gives data: 2.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GA gives data: 6.0\n",
-      "\tPASS\n",
-      "\texpect sequence: AAAAAAAAAAAAA gives data: 26.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GGGGGGGGGGGGG gives data: 52.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GAGAGAGAGAGAA gives data: 38.0\n",
-      "\tPASS\n",
-      "testing function: percentage_gc\n",
-      "\texpect sequence: G gives data: 100.0\n",
-      "\tPASS\n",
-      "\texpect sequence: AC gives data: 50.0\n",
-      "\tPASS\n",
-      "\texpect sequence: CAT gives data: 33.33333\n",
-      "\tPASS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# MODEL ANSWER\n",
-    "def test_sequence_fns(test_fn, test_seq_to_data):\n",
-    "    \"\"\"\n",
-    "    tests function test_fn gives expected data\n",
-    "    for test_seq_to_data list of tuple pairs\n",
-    "    [(sequence, data), (sequence, data), ...]\n",
-    "    \n",
-    "    prints out the test results\n",
-    "    \"\"\"\n",
-    "    print('testing function: ' + test_fn.__name__)\n",
-    "    for seq, expected in test_seq_to_data:\n",
-    "        print('\\texpect sequence: ' + seq + \n",
-    "              ' gives data: ' + str(expected))\n",
-    "        calculated = test_fn(seq)\n",
-    "        if calculated == expected or \\\n",
-    "           (isinstance(expected,float) \n",
-    "            and round(calculated,1) == round(expected,1)) :\n",
-    "            print('\\tPASS')\n",
-    "        else:\n",
-    "            print('\\tFAIL', calculated)\n",
-    "        \n",
-    "# now apply to test basic_tm\n",
-    "test_sequence_fns(basic_tm, test_seq_basic_tm)\n",
-    " \n",
-    "# and the percentage_gc function above\n",
-    "test_sequence_fns(percentage_gc, test_seq_percent_gc)\n",
-    "\n",
-    "# NOTE that we can pass a function the name of a function!\n",
-    "# NOTE avoid code duplication and t"
    ]
   },
   {
@@ -596,10 +397,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction append this test data to your test_data list for basic_tm function"
@@ -607,23 +406,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# MODEL ANSWER\n",
-    "test_seq_basic_tm.append((14*'G', 57.9))\n",
-    "test_seq_basic_tm.append((14*'A', 16.9))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction check that the current implementation of basic_tm fails for new test data"
@@ -631,46 +415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing function: basic_tm\n",
-      "\texpect sequence: G gives data: 4.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GG gives data: 8.0\n",
-      "\tPASS\n",
-      "\texpect sequence: A gives data: 2.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GA gives data: 6.0\n",
-      "\tPASS\n",
-      "\texpect sequence: AAAAAAAAAAAAA gives data: 26.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GGGGGGGGGGGGG gives data: 52.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GAGAGAGAGAGAA gives data: 38.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GGGGGGGGGGGGGG gives data: 57.9\n",
-      "\tFAIL 56.0\n",
-      "\texpect sequence: AAAAAAAAAAAAAA gives data: 16.9\n",
-      "\tFAIL 28.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# MODEL ANSWER\n",
-    "test_sequence_fns(basic_tm, test_seq_basic_tm)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "# instruction - replace basic_tm with a new implementation that deals with longer sequences"
@@ -678,46 +424,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# MODEL ANSWER\n",
-    "def basic_tm(sequence):\n",
-    "    \"\"\"\n",
-    "    returns the basic Tm melting temperature in degrees C\n",
-    "    for the input DNA sequence.\n",
-    "    \n",
-    "    For less than 14 bases the formula:\n",
-    "    \n",
-    "    Tm=2(NA+NT)+4(NG+NC)\n",
-    "    \n",
-    "    is used where NA is the number of A's, NT is the number of T's\n",
-    "    This formula is from http://biotools.nubic.northwestern.edu/OligoCalc.html \n",
-    "    who cite Marmur,J., and Doty,P. (1962) J Mol Biol 5:109-118 \n",
-    "    https://doi.org/10.1016/S0022-2836(62)80066-7\n",
-    "    \"\"\"\n",
-    "    n_a = sequence.count('A')\n",
-    "    n_t = sequence.count('T')\n",
-    "    n_g = sequence.count('G')\n",
-    "    n_c = sequence.count('C')\n",
-    "    n_total = n_a + n_t + n_g + n_c\n",
-    "    if n_total < 14:\n",
-    "        tm = 2.*(n_a + n_t)\n",
-    "        tm += 4.*(n_g + n_c)\n",
-    "    else:\n",
-    "        tm = 64.9+41.*(n_g+n_c-16.4)/n_total\n",
-    "    return tm "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction - check the help message for the new implementation of basic_tm"
@@ -725,51 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction - rerun tests and check that basic_tm works."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "testing function: basic_tm\n",
-      "\texpect sequence: G gives data: 4.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GG gives data: 8.0\n",
-      "\tPASS\n",
-      "\texpect sequence: A gives data: 2.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GA gives data: 6.0\n",
-      "\tPASS\n",
-      "\texpect sequence: AAAAAAAAAAAAA gives data: 26.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GGGGGGGGGGGGG gives data: 52.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GAGAGAGAGAGAA gives data: 38.0\n",
-      "\tPASS\n",
-      "\texpect sequence: GGGGGGGGGGGGGG gives data: 57.9\n",
-      "\tPASS\n",
-      "\texpect sequence: AAAAAAAAAAAAAA gives data: 16.9\n",
-      "\tPASS\n"
-     ]
-    }
-   ],
-   "source": [
-    "# MODEL ANSWER\n",
-    "test_sequence_fns(basic_tm, test_seq_basic_tm)"
    ]
   },
   {
@@ -804,10 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction - introduce the ambiguity='mid' into basic_tm"
@@ -815,10 +481,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test it (manual will do)"
@@ -833,10 +497,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# instruction - introduce the additional value 'range' for ambiguity"
@@ -844,10 +506,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# test it (manual will do)"
