Say stop at the bringing together video in workbook
Issue #1 corrections from Jana.

" regarding the DataCamp course chapter, if would be appreciated to note
that the students should progress up until the ‘Bringing it all
together’, as that section deals with Pandas which we haven’t yet gone
through."

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -12,7 +12,9 @@
     "\n",
     "from the\n",
     "[DataCamp online course: Python Data Science Toolbox (Part 1)\n",
-    "](https://campus.datacamp.com/courses/python-data-science-toolbox-part-1/).\n",
+    "](https://campus.datacamp.com/courses/python-data-science-toolbox-part-1/),\n",
+    "but stop at the *'Bringing it all together'* video (as this uses functions\n",
+    "with Pandas and dictionaries that we have not yet tackled).\n",
     "\n",
     "We will then use what you have learnt there to explore how biological\n",
     "data can be handled in Python."
