clear up confusion between parameter and argument
Jana corrections #1

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -51,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see built in functions we have been using\n",
@@ -75,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to get help on the len() function\n",
@@ -94,9 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: write Python expression to find out what abs function does\n",
@@ -113,9 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: print out the abs function for the input -15 and -123.5 and 7\n",
@@ -137,9 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell containing an example function called double\n",
@@ -159,22 +149,20 @@
    "metadata": {},
    "source": [
     "When you ran the cell notice that no output was produced. But the Jupyter Notebook kernel now knows there is a function called `double`.\n",
-    "* It has a single **argument** called `number`. \n",
+    "* It has a single **parameter** called `number`. \n",
     "* the function definition starts with a header line starting `def` and ending with a colon `:`\n",
     "* the function is then indented with 4 spaces (in the same way as `if` and `for`).\n",
     "* The first thing in a function should be a **docstring** that is surrounded by triple double quotation marks.\n",
     "* The **docstring** can have more than one line.\n",
     "* this function returns a single value with a **return** statement.\n",
     "\n",
-    "The function can be called:"
+    "The function can be called, for example the next cell with run `double` twice, once with an argument of `2` (an integer) and then again with an argument of `-1975.13` (a floating number). In each case the result will be printed."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to show running the double function \n",
@@ -186,15 +174,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The docstring help message can be accessed:"
+    "Note that the actual value of the argument is used as the parameter `number` when the `double` function is run. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The docstring help message for `double` can be accessed in the same way we have seen for Python built in functions (like `len`):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "help(double)"
@@ -212,9 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "sequence = 'ATTGGGCCCC'\n",
@@ -245,9 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: write a function thats returns the complement in a given sequence.\n",
@@ -273,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: use the complement function to check the sequences\n",
@@ -295,9 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to check help message for complement\n",
@@ -314,9 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: write a reverse_complement function"
@@ -325,9 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: test your reverse_complement function"
@@ -347,9 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: rewritten reverse complement function"
@@ -365,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -381,9 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: extended complement function"
@@ -402,9 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: test complement and reverse_complement\n",
@@ -430,9 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell so the kernel has the log_entry definition\n",
@@ -450,9 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see result of calling log_entry with a single argument\n",
@@ -469,9 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell to see override of the default\n",
@@ -491,9 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: call log_entry to log the 3 entries"
@@ -510,9 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "log_entry(name='Field Mouse')\n",
@@ -538,9 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: complete the new complement fn. with reverse argument\n",
@@ -559,9 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_seq = 'AAAG'\n",
@@ -606,9 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: write rna_complement function \n",
@@ -620,9 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: your test rna_complement function by running this cell.\n",
@@ -678,9 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: test current complement \n",
@@ -713,9 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: run this cell for a demonstration of \n",
@@ -733,9 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: produce a complement function that preserves \n",
@@ -748,9 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Instruction: test new complement function.\n",
