correct typo in docstring
Noted in Jana corrections #1

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -138,7 +138,7 @@
     "    returns doubles the input number.\n",
     "    \n",
     "    Note: this is a docstring describing what function does. \n",
-    "    It is can have more than one line!\n",
+    "    docstrings can have more than one line!\n",
     "    \"\"\"\n",
     "    double_number = 2*number\n",
     "    return double_number"
