correct complement calculator link
Jana corrections #1

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -256,7 +256,9 @@
     "* `ATGC`\n",
     "* `CTGCTATAAAAGGCTG`\n",
     "\n",
-    "You might want to use http://arep.med.harvard.edu/cgi-bin/adnan/revcomp.pl"
+    "You might want to use \n",
+    "http://arep.med.harvard.edu/labgc/adnan/projects/Utilities/revcomp.htm\n",
+    "for an additional check."
    ]
   },
   {
