Add bold comment about running cells & the kernel
Jana's corrections #1

--- a/workbook_E.ipynb
+++ b/workbook_E.ipynb
@@ -275,6 +275,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "> **Note in jupyter notebook you have to run a cell for the kernel**\n",
+    "> **to process it. So if you make a change to your `complement` function**\n",
+    "> **make sure you run the cell before testing it again.**\n",
+    "> **This can be confusing! Ask for help if you are baffled!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Is the help message for the `complement` function reasonable?\n",
     "Imagine you are a user of the function who cannot read the source code.\n",
     "\n",
