Deal with Jana's corrections
see #1

--- a/homework_E.ipynb
+++ b/homework_E.ipynb
@@ -98,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to test the `number_gc` function works\n",
+    "Now we need to test the `percent_gc` function works\n",
     "\n",
     "First complete this table \n",
     "\n",
@@ -160,24 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function round in module builtins:\n",
-      "\n",
-      "round(number, ndigits=None)\n",
-      "    Round a number to a given precision in decimal digits.\n",
-      "    \n",
-      "    The return value is an integer if ndigits is omitted or None.  Otherwise\n",
-      "    the return value has the same type as the number.  ndigits may be negative.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Instruction run this cell to see help on the round function\n",
     "help(round)"
@@ -185,18 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b_num rounded to 2 d.p. 6.0\n",
-      "the two numbers agree to 2 decimal places\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# instruction run this example to see how round can be used to compare numbers\n",
     "a_num = 6.0\n",
@@ -444,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional: Adapting the basic_tm to deal with amigious sequence X\n",
+    "## Optional: Adapting the basic_tm to deal with  ambiguous sequence X\n",
     "\n",
     "> Have a go at this if you have time.\n",
     "\n",
@@ -519,7 +495,6 @@
    "source": [
     "# Real world prediction of DNA melting temperatures using Python\n",
     "\n",
-    "* This exercise is designed to get you thinking about using functions\n",
     "* For real-world prediction of DNA melting temperatures [BioPython](https://biopython.org/)\n",
     "  includes a MeltingTemp module:\n",
     "\n",
@@ -532,6 +507,15 @@
     "Web tools:\n",
     "* http://biotools.nubic.northwestern.edu/OligoCalc.html\n",
     "* https://www.ebi.ac.uk/biomodels-static/tools/melting/melt.php"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional: Try out the BioPython MeltingTemp module\n",
+    "\n",
+    "This is for the keen! "
    ]
   },
   {
